fix: make .overflow-auto important

--- a/assets/css/jekyll-theme-chirpy.scss
+++ b/assets/css/jekyll-theme-chirpy.scss
@@ -8,6 +8,10 @@
 ';
 
 /* append your custom style below */
+.overflow-auto {
+  overflow: auto !important;
+}
+
 .subtitle {
   font-size: small;
   display: inline-block;
